fix: s3 duplicate config